--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "request-promise": "^4.2.6"
   },
   "devDependencies": {
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "nodemon": "^2.0.14"
   }
 }
