--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-joi": "^1.0.0-alpha.0",
     "react-router-dom": "^5.3.0",
