--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-joi": "^1.0.0-alpha.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
