--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore db.json start.js"
+    "start": "nodemon --ignore dbTest.json start.js"
   },
   "author": "",
   "license": "ISC",
