--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^1.1.2"
   },
