--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "bootstrap": "^5.1.2",
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
+    "moment-jalali": "^0.3.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-joi": "^1.0.0-alpha.0",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-number-format": "^4.9.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
