--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "moment-jalali": "^0.3.9",
     "react": "^17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-joi": "^1.0.0-alpha.0",
