--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/MHMighani/chortkeh",
+  "homepage": "https://mhmighani.github.io/chortkeh",
   "name": "chortkeh-client",
   "version": "0.1.0",
   "private": true,
@@ -36,8 +36,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
