Update opening modal

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mhmighani.github.io/",
+  "homepage": "https://mhmighani.github.io/chortkeh",
   "name": "chortkeh-client",
   "version": "0.1.0",
   "private": true,
