--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore dbTest.json start.js"
+    "start": "nodemon --ignore db.json start.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
     "edit-json-file": "^1.6.0",
+    "json-server-auth": "^2.1.0",
     "request-promise": "^4.2.6"
   },
   "devDependencies": {
